--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -1,34 +1,39 @@
-name: Hello World
+name: CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  workflow_dispatch:
+    branches: [ master ]
 
 jobs:
-  job1:
-    name: Primeiro Job
+  ubuntu:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Passo 1
-        run: env | sort
-  
-  job2:
-    name: Segundo Job
+      - uses: actions/checkout@v2
+
+      - name: Show hour ubuntu
+        run: timedatectl
+        
+  windows:
     runs-on: windows-latest
     steps:
-      - name: Passo 1
-        run: "Get-ChildItem Env: | Sort-Object Name"
+      - uses: actions/checkout@v2
+
+      - name: Show hour windows
+        run: Get-Date
         
-  job3:
-    name: Terceiro Job
-    runs-on: ubuntu-latest
-    needs: [job1, job2]
-    
+  macOS:
+    runs-on: macos-latest
     steps:
-      - name: Ultimo passo
-        run: echo Passo final
+      - uses: actions/checkout@v2
+
+      - name: Show hour mac
+        run: date +%Y-%m-%d
+        
+  depend_others_jobs:
+    runs-on: ubuntu-latest
+    needs: [ubuntu, windows, macOS]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Show hour ubuntu depend others jobs
+        run: timedatectl
