--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,7 +63,7 @@ jobs:
       NODE_ENV: production
       
     needs: [deploy-homologacao]
-    enviroments: producao
+    environment: producao
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
